data/all_generated_tests/raw_wast_tests/nop_StackCorruption_80.wast
;; 1. A function call followed directly by a `nop` instruction to ensure that the stack state before and after the `nop` remains unchanged, specifically testing for any unwanted stack manipulations.

(assert_invalid
  (module (func $call-and-nop (call $some_func) (nop)))
  "unknown function"
)